--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                           <tbody>
                             <tr>
                               <td align="center" style="font-size:0px;padding:0 10px;word-break:break-word;">
-                                <div style="font-family:Raleway;font-size:28px;line-height:40px;text-align:center;color:#000000;"><b>TURN EVERYDAY MEALS INTO GOURMET FEASTS ✨</b></div>
+                                <div style="font-family:Raleway;font-size:28px;font-weight:600;line-height:40px;text-align:center;color:#000000;">TURN EVERYDAY MEALS INTO GOURMET FEASTS ✨</div>
                               </td>
                             </tr>
                             <tr>
@@ -274,7 +274,7 @@
                           <tbody>
                             <tr>
                               <td align="center" style="font-size:0px;padding:0;word-break:break-word;">
-                                <div style="font-family:Raleway;font-size:28px;line-height:1;text-align:center;color:#000000;"><b>A GOURMET TOUCH TO YOUR DISHES</b></div>
+                                <div style="font-family:Raleway;font-size:28px;font-weight:600;line-height:1;text-align:center;color:#000000;">A GOURMET TOUCH TO YOUR DISHES</div>
                               </td>
                             </tr>
                             <tr>
