--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
     </style>
     <![endif]-->
   <!--[if !mso]><!-->
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" type="text/css">
   <style type="text/css">
-    @import url(https://fonts.googleapis.com/css?family=Raleway);
+    @import url(https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap);
 
   </style>
   <!--<![endif]-->
@@ -193,7 +193,7 @@
                           <tbody>
                             <tr>
                               <td align="center" style="font-size:0px;padding:0 10px;word-break:break-word;">
-                                <div style="font-family:Raleway;font-size:28px;font-weight:600;line-height:40px;text-align:center;color:#000000;">TURN EVERYDAY MEALS INTO GOURMET FEASTS ✨</div>
+                                <div style="font-family:Raleway;font-size:28px;font-weight:800;line-height:36px;text-align:center;color:#000000;">TURN EVERYDAY MEALS INTO GOURMET FEASTS ✨</div>
                               </td>
                             </tr>
                             <tr>
@@ -274,7 +274,7 @@
                           <tbody>
                             <tr>
                               <td align="center" style="font-size:0px;padding:0;word-break:break-word;">
-                                <div style="font-family:Raleway;font-size:28px;font-weight:600;line-height:1;text-align:center;color:#000000;">A GOURMET TOUCH TO YOUR DISHES</div>
+                                <div style="font-family:Raleway;font-size:28px;font-weight:800;line-height:32px;text-align:center;color:#000000;">A GOURMET TOUCH TO YOUR DISHES</div>
                               </td>
                             </tr>
                             <tr>
@@ -284,7 +284,7 @@
                             </tr>
                             <tr>
                               <td align="center" style="font-size:0px;padding:0;padding-bottom:35px;word-break:break-word;">
-                                <div style="font-family:Raleway;font-size:16px;font-weight:400;line-height:25px;text-align:center;color:#000000;">Discover how high-quality sea salts can elevate your everyday meals into gourmet experiences. Our selection of sea salts will bring new flavors and textures to your kitchen. Whether you're finishing a salad, seasoning meats, or adding a smoky twist to your favorite dishes, our sea salts are the perfect addition to your pantry.</div>
+                                <div style="font-family:Raleway;font-size:16px;line-height:25px;text-align:center;color:#000000;">Discover how high-quality sea salts can elevate your everyday meals into gourmet experiences. Our selection of sea salts will bring new flavors and textures to your kitchen. Whether you're finishing a salad, seasoning meats, or adding a smoky twist to your favorite dishes, our sea salts are the perfect addition to your pantry.</div>
                               </td>
                             </tr>
                             <tr>
